Code smells part 3 (#2246)
* Code smells part 3

* final change of part 3

* removed unwanted import

* refactored to use Set.of

* removed imports